# BeaverBuilds

./: Cargo.toml  README.md
.claude/: settings.json
crates/bevy_reactive_bsn/: Cargo.toml  LICENSE-MIT  PROPOSAL.md  README.md
crates/bevy_reactive_bsn/examples/: counter.rs
crates/bevy_reactive_bsn/src/: async_resource.rs  dep.rs  lib.rs  runner.rs
crates/bevy_reactive_bsn/tests/: reactive.rs
src/: bench.rs  bridge.rs  chronicle.rs  demo.rs  intro.rs  main.rs  menu.rs
src/interact/: mod.rs
src/render/: camera.rs  mod.rs
src/sim/: beavers.rs  buildings.rs  map.rs  mod.rs  pathfind.rs  trees.rs  water.rs
src/ui/: mod.rs
